# cf-tools

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  Untitled.ipynb  setup.cfg  setup.py
.github/workflows/: cancel.yaml  ci.yaml  pre-commit.yaml
cf_tools/: __init__.py  accessor.py  oceandataset.py  utils.py
cf_tools/models/: nemodataset.py
cf_tools/nemo/: __init__.py  accessor.py  standardizer.py  standardizers.py
cf_tools/tests/: conftest.py  datasets.py  test_accessor.py  test_nemo.py  test_nemodataset.py
ci/: environment.yml  upsteam_dev_env.yml
