# setup.cfg

[metadata]
name = cf_tools

[options]
install_requires =
    xarray
    cf_xarray
    xgcm
    setuptools
setup_requires =
    setuptools
    setuptools_scm

[tool:pytest]
testpaths = cf_tools/tests
addopts =
    -v
    --cov-report term

[coverage:run]
omit = **/tests/*

[isort]
profile = black
skip = .ipynb_checkpoints

[black]
exclude = .ipynb_checkpoints

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .ipynb_checkpoints

[darglint]
docstring_style=numpy

[mypy]
ignore_missing_imports = True

[pylint.master]
disable = E0401

[pylint.basic]
good-names = ds, da
