# setup.cfg

[metadata]
name = cf_tools
license = Apache
url = https://github.com/NOC-MSM/cf-tools

[options]
packages = cf_tools
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
install_requires =
    dask
    imageio
    matplotlib
    xarray
    cf_xarray
    xgcm
    numpy
    gsw
    xoak
    setuptools
setup_requires =
    setuptools
    setuptools_scm

[tool:pytest]
testpaths = cf_tools/tests
filterwarnings = 
    # xesmf, ESMF
    ignore:Input array is not .*_CONTIGUOUS.:UserWarning
    ignore:Passing None into shape arguments as an alias for \(\) is deprecated.:DeprecationWarning
    ignore:``output_sizes`` should be given in the ``dask_gufunc_kwargs`` parameter.:FutureWarning
addopts =
    -v
    --cov

[coverage:run]
omit = **/tests/*

[isort]
profile = black
skip = .ipynb_checkpoints

[black]
exclude = .ipynb_checkpoints

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .ipynb_checkpoints

[darglint]
docstring_style=numpy

[mypy]
ignore_missing_imports = True

[pylint.master]
disable = E0401, R0903

[pylint.basic]
good-names = ds, da
